Fix bugs after rename

--- a/res/xml-large-land/widget_meta.xml
+++ b/res/xml-large-land/widget_meta.xml
@@ -1,5 +1,5 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:configure="com.assist.WidgetConfigActivity"
+    android:configure="com.btc_e_assist.WidgetConfigActivity"
     android:initialLayout="@layout/widget"
     android:minHeight="40dp"
     android:minWidth="180dp"
