--- a/res/xml/widget_half_meta.xml
+++ b/res/xml/widget_half_meta.xml
@@ -1,5 +1,5 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:configure="com.assist.WidgetHalfConfigActivity"
+    android:configure="com.btc_e_assist.WidgetHalfConfigActivity"
     android:initialLayout="@layout/widget_half"
     android:minHeight="40dp"
     android:minWidth="110dp"
