--- a/res/layout/activity_trade.xml
+++ b/res/layout/activity_trade.xml
@@ -63,6 +63,7 @@
             android:ems="10"
             android:gravity="center_horizontal"
             android:hint="@string/price"
+            android:imeOptions="actionDone"
             android:inputType="numberDecimal"
             android:singleLine="true"
             android:textStyle="bold" />
