Fixed: - TradeControl.setKeys(Context); - Graph for 1.8 and so on Prices - Try fix strange bug with lost background - Widget lost text, presumably, fixed, but not tested cuz this behaviour is difficalt for repeating - Pass dialog after rotate screen in MainActivity - "No keys" message instead connection error - Save pairs after rotate screen - Save selected tab after rotate screen - Trade for normal landscape - Disable full screen edit in normal landscape for trade,add alarm,pass dialog for MainActivity and Select Profile - Trade total and fee values max length - Ticker max lenght for all values - Reduced size of "add alarm" button - About english text was edited - "Add profile" crash if make toast when not attached - News default language fixed - Ticker show real price, not compact - Assist notify text edited - Add Profile tips size in normal land - Alarm for large port optimized
Capabilities added:
- Fragment name for connection error message
- Orders and Tasks dell and select all buttons shown dynamically
- Widget auto update change to 2 hours
- Widget minResizeWidth change to 40dp
- Ticker change in percents

--- a/res/layout-large-land/fragment_ticker.xml
+++ b/res/layout-large-land/fragment_ticker.xml
@@ -10,9 +10,7 @@
         android:layout_marginLeft="@dimen/avg_margin"
         android:layout_marginRight="@dimen/avg_margin"
         android:layout_marginTop="@dimen/avg_margin"
-        android:background="@drawable/shadow_background"
-        android:paddingBottom="@dimen/med_margin"
-        android:paddingTop="@dimen/med_margin" >
+        android:background="@drawable/shadow_background" >
 
         <TextView
             android:id="@+id/tickerTextDiv"
@@ -53,7 +51,7 @@
             android:layout_marginLeft="@dimen/standard_margin"
             android:layout_marginTop="33dp"
             android:text="@string/price"
-            android:textColor="#b2222222" />
+            android:textColor="@color/Black70" />
 
         <ImageView
             android:id="@+id/tickerLastDots"
@@ -69,6 +67,7 @@
             android:layout_alignBottom="@+id/tickerLastDots"
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/standard_margin"
+            android:maxLength="32"
             android:text="-"
             android:textSize="45sp"
             android:textStyle="bold" />
@@ -82,7 +81,7 @@
             android:layout_marginLeft="@dimen/standard_margin"
             android:layout_marginTop="@dimen/high_margin"
             android:text="Min"
-            android:textColor="#b2222222" />
+            android:textColor="@color/Black70" />
 
         <ImageView
             android:id="@+id/tickerMinDots"
@@ -98,6 +97,7 @@
             android:layout_alignBottom="@+id/tickerMinName"
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/standard_margin"
+            android:maxLength="100"
             android:text="-"
             android:textColor="@color/Black90" />
 
@@ -110,7 +110,7 @@
             android:layout_marginLeft="@dimen/standard_margin"
             android:layout_marginTop="@dimen/high_margin"
             android:text="Max"
-            android:textColor="#b2222222" />
+            android:textColor="@color/Black70" />
 
         <ImageView
             android:id="@+id/tickerMaxDots"
@@ -126,6 +126,7 @@
             android:layout_alignBottom="@+id/tickerMaxName"
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/standard_margin"
+            android:maxLength="100"
             android:text="-"
             android:textColor="@color/Black90" />
 
@@ -138,7 +139,7 @@
             android:layout_marginLeft="@dimen/standard_margin"
             android:layout_marginTop="@dimen/high_margin"
             android:text="@string/volume"
-            android:textColor="#b2222222" />
+            android:textColor="@color/Black70" />
 
         <ImageView
             android:id="@+id/tickerVolumeDots"
@@ -154,6 +155,7 @@
             android:layout_alignBottom="@+id/tickerVolumeName"
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/standard_margin"
+            android:maxLength="100"
             android:text="-"
             android:textColor="@color/Black90" />
 
@@ -199,7 +201,7 @@
         android:layout_marginLeft="@dimen/avg_margin"
         android:layout_marginRight="@dimen/avg_margin"
         androidPlot.graphWidget.marginBottom="20dp"
-        androidPlot.graphWidget.marginLeft="@dimen/activity_horizontal_margin"
-        androidPlot.graphWidget.marginTop="@dimen/min_margin" />
+        androidPlot.graphWidget.marginLeft="@dimen/avg_margin"
+        androidPlot.graphWidget.marginTop="@dimen/standard_margin" />
 
 </LinearLayout>
