--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -35,12 +35,13 @@
         <item name="android:textColor">@color/DarkSlateBlue</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">11sp</item>
+        <item name="android:maxLines">1</item>
     </style>
 
     <style name="WidgetTextNameStyle">
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:singleLine">true</item>
+        <item name="android:maxLines">1</item>
         <item name="android:textSize">12sp</item>
     </style>
 
