--- a/res/layout-normal-land/fragment_addprofile.xml
+++ b/res/layout-normal-land/fragment_addprofile.xml
@@ -75,7 +75,7 @@
     <TextView
         android:id="@+id/addprofileTips"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="35dp"
         android:layout_alignParentBottom="true"
         android:background="@color/Gray2"
         android:drawableLeft="@drawable/tips"
