--- a/res/layout-normal-land/fragment_ticker.xml
+++ b/res/layout-normal-land/fragment_ticker.xml
@@ -10,9 +10,7 @@
         android:layout_marginLeft="@dimen/avg_margin"
         android:layout_marginRight="@dimen/avg_margin"
         android:layout_marginTop="@dimen/avg_margin"
-        android:background="@drawable/shadow_background"
-        android:paddingBottom="@dimen/med_margin"
-        android:paddingTop="@dimen/med_margin" >
+        android:background="@drawable/shadow_background" >
 
         <TextView
             android:id="@+id/tickerTextDiv"
@@ -21,7 +19,7 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:text="÷"
-            android:textSize="35sp"
+            android:textSize="25sp"
             android:textStyle="bold" />
 
         <Spinner
@@ -53,7 +51,7 @@
             android:layout_marginLeft="@dimen/standard_margin"
             android:layout_marginTop="12dp"
             android:text="@string/price"
-            android:textColor="#b2222222" />
+            android:textColor="@color/Black70" />
 
         <ImageView
             android:id="@+id/tickerLastDots"
@@ -69,6 +67,7 @@
             android:layout_alignBottom="@+id/tickerLastDots"
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/standard_margin"
+            android:maxLength="28"
             android:text="-"
             android:textSize="25sp"
             android:textStyle="bold" />
@@ -82,7 +81,7 @@
             android:layout_marginLeft="@dimen/standard_margin"
             android:layout_marginTop="@dimen/med_margin"
             android:text="@string/volume"
-            android:textColor="#b2222222" />
+            android:textColor="@color/Black70" />
 
         <ImageView
             android:id="@+id/tickerVolumeDots"
@@ -98,6 +97,7 @@
             android:layout_alignBottom="@+id/tickerVolumeName"
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/standard_margin"
+            android:maxLength="50"
             android:text="-"
             android:textColor="@color/Black90" />
 
@@ -107,7 +107,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/tickerVolumeValue"
             android:layout_marginRight="@dimen/min_margin"
-            android:layout_marginTop="@dimen/high_margin"
+            android:layout_marginTop="@dimen/standard_margin"
             android:orientation="horizontal"
             android:paddingBottom="@dimen/min_margin" >
 
@@ -143,7 +143,7 @@
         android:layout_marginLeft="@dimen/avg_margin"
         android:layout_marginRight="@dimen/avg_margin"
         androidPlot.graphWidget.marginBottom="20dp"
-        androidPlot.graphWidget.marginLeft="@dimen/activity_horizontal_margin"
-        androidPlot.graphWidget.marginTop="@dimen/min_margin" />
+        androidPlot.graphWidget.marginLeft="@dimen/avg_margin"
+        androidPlot.graphWidget.marginTop="@dimen/standard_margin" />
 
 </LinearLayout>
