--- a/res/layout/fragment_ticker.xml
+++ b/res/layout/fragment_ticker.xml
@@ -10,9 +10,7 @@
         android:layout_marginLeft="@dimen/avg_margin"
         android:layout_marginRight="@dimen/avg_margin"
         android:layout_marginTop="@dimen/avg_margin"
-        android:background="@drawable/shadow_background"
-        android:paddingBottom="@dimen/med_margin"
-        android:paddingTop="@dimen/med_margin" >
+        android:background="@drawable/shadow_background" >
 
         <TextView
             android:id="@+id/tickerTextDiv"
@@ -51,9 +49,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="@dimen/standard_margin"
-            android:layout_marginTop="33dp"
+            android:layout_marginTop="18dp"
             android:text="@string/price"
-            android:textColor="#b2222222" />
+            android:textColor="@color/Black70" />
 
         <ImageView
             android:id="@+id/tickerLastDots"
@@ -69,9 +67,12 @@
             android:layout_alignBottom="@+id/tickerLastDots"
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/standard_margin"
+            android:maxLength="14"
             android:text="-"
-            android:textSize="45sp"
+            android:textSize="30sp"
             android:textStyle="bold" />
+
+
 
         <TextView
             android:id="@+id/tickerMinName"
@@ -80,9 +81,9 @@
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/tickerLastName"
             android:layout_marginLeft="@dimen/standard_margin"
-            android:layout_marginTop="@dimen/high_margin"
+            android:layout_marginTop="@dimen/avg_margin"
             android:text="Min"
-            android:textColor="#b2222222" />
+            android:textColor="@color/Black70" />
 
         <ImageView
             android:id="@+id/tickerMinDots"
@@ -98,6 +99,7 @@
             android:layout_alignBottom="@+id/tickerMinName"
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/standard_margin"
+            android:maxLength="30"
             android:text="-"
             android:textColor="@color/Black90" />
 
@@ -108,9 +110,9 @@
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/tickerMinName"
             android:layout_marginLeft="@dimen/standard_margin"
-            android:layout_marginTop="@dimen/high_margin"
+            android:layout_marginTop="@dimen/avg_margin"
             android:text="Max"
-            android:textColor="#b2222222" />
+            android:textColor="@color/Black70" />
 
         <ImageView
             android:id="@+id/tickerMaxDots"
@@ -126,6 +128,7 @@
             android:layout_alignBottom="@+id/tickerMaxName"
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/standard_margin"
+            android:maxLength="30"
             android:text="-"
             android:textColor="@color/Black90" />
 
@@ -136,9 +139,9 @@
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/tickerMaxName"
             android:layout_marginLeft="@dimen/standard_margin"
-            android:layout_marginTop="@dimen/high_margin"
+            android:layout_marginTop="@dimen/avg_margin"
             android:text="@string/volume"
-            android:textColor="#b2222222" />
+            android:textColor="@color/Black70" />
 
         <ImageView
             android:id="@+id/tickerVolumeDots"
@@ -154,6 +157,7 @@
             android:layout_alignBottom="@+id/tickerVolumeName"
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/standard_margin"
+            android:maxLength="28"
             android:text="-"
             android:textColor="@color/Black90" />
 
@@ -163,7 +167,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/tickerVolumeValue"
             android:layout_marginRight="@dimen/min_margin"
-            android:layout_marginTop="@dimen/high_margin"
+            android:layout_marginTop="@dimen/avg_margin"
             android:orientation="horizontal"
             android:paddingBottom="@dimen/min_margin" >
 
@@ -199,7 +203,7 @@
         android:layout_marginLeft="@dimen/avg_margin"
         android:layout_marginRight="@dimen/avg_margin"
         androidPlot.graphWidget.marginBottom="20dp"
-        androidPlot.graphWidget.marginLeft="@dimen/activity_horizontal_margin"
-        androidPlot.graphWidget.marginTop="@dimen/min_margin" />
+        androidPlot.graphWidget.marginLeft="@dimen/avg_margin"
+        androidPlot.graphWidget.marginTop="@dimen/standard_margin" />
 
 </LinearLayout>
