--- a/res/menu/assist_tasks_actions.xml
+++ b/res/menu/assist_tasks_actions.xml
@@ -2,19 +2,21 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:myapp="http://schemas.android.com/apk/res-auto" >
 
-    <item
-        android:id="@+id/action_select_all"
-        android:icon="@drawable/select_all"
-        android:orderInCategory="1"
-        android:showAsAction="always"
-        android:title="@string/select_all"
-        myapp:showAsAction="always"/>
-    <item
-        android:id="@+id/action_cancel"
-        android:icon="@drawable/remove"
-        android:orderInCategory="2"
-        android:showAsAction="always"
-        android:title="@string/action_cancel"
-        myapp:showAsAction="always"/>
+    <group android:id="@+id/action_group_tasks_delete" >
+        <item
+            android:id="@+id/action_select_all"
+            android:icon="@drawable/select_all"
+            android:orderInCategory="1"
+            android:showAsAction="always"
+            android:title="@string/select_all"
+            myapp:showAsAction="always"/>
+        <item
+            android:id="@+id/action_cancel"
+            android:icon="@drawable/remove"
+            android:orderInCategory="2"
+            android:showAsAction="always"
+            android:title="@string/action_cancel"
+            myapp:showAsAction="always"/>
+    </group>
 
 </menu>
