--- a/res/values-land/styles.xml
+++ b/res/values-land/styles.xml
@@ -22,12 +22,13 @@
         <item name="android:textColor">@color/DarkSlateBlue</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">10sp</item>
+        <item name="android:maxLines">1</item>
     </style>
 
     <style name="WidgetTextNameStyle">
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:singleLine">true</item>
+        <item name="android:maxLines">1</item>
         <item name="android:textSize">10sp</item>
     </style>
 
