--- a/res/xml/widget_meta.xml
+++ b/res/xml/widget_meta.xml
@@ -2,8 +2,9 @@
     android:configure="com.btc_e_assist.WidgetConfigActivity"
     android:initialLayout="@layout/widget"
     android:minHeight="40dp"
+    android:minResizeWidth="110dp"
     android:minWidth="250dp"
     android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="3600000" >
+    android:updatePeriodMillis="7200000" >
 
 </appwidget-provider>
